# ae-slp-docvault-modernization

./: .gitignore  README.md
awa/: .cursorignore  .dockerignore  .env.example  .gitignore  .markdownlint.json  .mcp.example.json  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.ui  Makefile  README.md  bitbucket-pipelines.yml  config.dev.yaml  config.example.yaml  docker-compose.awa-supporting.yml  docker-compose.awa.yml  docker-compose.langfuse.yml  docker-compose.litellm.yml  docker-compose.yml  goose.config.example.yaml  litellm_config.example.yaml  opencode.example.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  request.json  ruff.toml  tsconfig.json
awa/.claude/agents/: bitbucket-api-operator.md  code-author.md  code-review-agent.md  code-simplifier.md  git-operations-executor.md  implementation-plan-validator.md  jira-operator.md  repo-initializer.md  task-researcher.md  test-runner.md
awa/.claude/commands/: baml-development.md  docs-generation.md  pr-description.md  python-development.md  spec-writing.md  workflow-management.md  write-bug.md
awa/.claude/hooks/: stop-lint.sh
awa/.cursor/rules/: baml-development.mdc  core-instructions.mdc  docs-generation.mdc  pr-description.mdc  python-development.mdc  spec-writing.mdc  workflow-management.mdc  write-bug.mdc
awa/.github/: copilot-instructions.md
awa/.github/instructions/: baml-development.instructions.md  docs-generation.instructions.md  pr-description.instructions.md  python-development.instructions.md  write-bug.instructions.md
awa/.github/prompts/: spec-writing.md  workflow-management.md
awa/.opencode/agent/: bitbucket-api-operator.md  code-author.md  code-review-agent.md  code-simplifier.md  git-operations-executor.md  implementation-plan-validator.md  jira-operator.md  repo-initializer.md  task-researcher.md  test-runner.md
awa/.opencode/command/: baml-development.md  docs-generation.md  pr-description.md  python-development.md  spec-writing.md  workflow-management.md  write-bug.md
awa/.serena/: project.yml
awa/.serena/memories/: architecture_and_core_components.md  code_style_and_conventions.md  deployment_and_infrastructure.md  mcp_server_architecture.md  project_overview.md  suggested_commands.md  task_completion_requirements.md  testing_patterns_and_practices.md
awa/assets/aws-cards/: README.md
awa/assets/hello-world-csharp/: HelloWorld.sln
awa/assets/vitepress-starter/: package-lock.json  package.json
awa/awa/: __init__.py  main.py
awa/awa/core/: constants.py
awa/awa/schemas/: app_config.schema.json
awa/awa/sdk/: constants.py  sdk.config.yaml
awa/cookbook/: __init__.py
awa/cookbook/recipes/: constants.py
awa/docs/: index.md
awa/docs/.shared/: github-copilot-litellm-config.md  leapp.md  mcp-usage.md  recipe-setup-pre.md  running-mcp.md  running-recipes.md  sdk-client-usage.md  supported-file-types.md  taskstream-101-intro.md  transform-vs-transform.md  windows-json-cli-quirk.md
awa/docs/.vitepress/: config.mts  cookbook-sidebar.ts
awa/docs/ai/: core-instructions.md  index.md
awa/docs/configuration/: authentication.md  index.md  mcp-servers.md
awa/docs/contributing/: api-test-generation-developer.md  api-testing.md  authentication.md  ci.md  cross-platform-considerations.md  debugging.md  deployment.md  developer-workflow.md  docs-generation.md  documentation.md  dynamic-baml.md  index.md  temporal-conventions.md  workflow-input.md  workflow-management.md
awa/docs/cookbook/: configuration.md  index.md  (+1 more)
awa/dynamicconfig/: development-sql.yaml
awa/pipelines/: __init__.py  cd.py  ci.py  common.py  publish_sdk.py
awa/scripts/: aws-codeartifact-auth.ps1  aws-codeartifact-auth.sh  build.bat  build.sh  build_ui_assets.py  clear_registry.py  docker-entrypoint-api.sh  docker-entrypoint-ui.sh  docker-entrypoint-worker.sh  dump_docker.py  enforce_sdk_utils_naming.py  generate_api_reference_docs.py  generate_baml_client.py  generate_cli_docs.py  generate_config_reference_docs.py  generate_config_schema.py  generate_sdk_facades.py  generate_typescript_models.py  get_sdk_version.py  install.bat  install.py  install.sh  setup_config.py  setup_pycache.sh  validate_sdk_current.py  verify_install_prerequisites.ps1  verify_install_prerequisites.py  verify_install_prerequisites.sh
awa/tests/: __init__.py  conftest.py  models.py
awa/ui/: .gitignore  astro.config.mjs  auth.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
(+2147 files in other folders)
