[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awa-client"
version = "1.0.29"
description = "A Python client library for Awa"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
]
build = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "check-manifest>=0.49",
    "wheel>=0.42.0",
    "setuptools>=69.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/awa-client"
Documentation = "https://github.com/yourorg/awa-client"
Repository = "https://github.com/yourorg/awa-client"
Issues = "https://github.com/yourorg/awa-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["awa"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
build = [
    "build>=1.2.2.post1",
    "check-manifest>=0.50",
    "setuptools>=80.9.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
